kubernetes/ingress/nginx-example-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: example-nginx
spec:
  rules:
  - host: nginx.example.com
    http:
      paths:
      - backend:
          serviceName: nginxservice
          servicePort: 80
